# exotraction

./: bs_utils.py  contract_2pt_matrix.py  contract_setup.py  contraction.ipynb  create-master-corr.py  displacement.ipynb  displacement.py  extract_v_coeffs.py  gamma.ipynb  gamma.py  gamma_gb.py  gamma_lookup.py  h5_utils.py  helicity.py  ingest_data.py  ingest_data_gb.py  inspect-contract.py  irrep.py  master_corr.py  merge_h5.py  notes.md  profiles.py  pyproject.toml  run-contract-gb.py  slurm-contract.sh  test-create-master.py  two_pt_corr.py  two_pt_correlator.py  two_pt_mat_corr.ipynb
notes/: contractions.tex
old/: contract_gb.py  run-contract-gb.py  run_contract.py
